<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">
  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      tools:ignore="MissingConstraints"/>


  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/appCompatImageView"
      android:layout_width="match_parent"
      android:layout_height="74dp"
      android:background="@color/verde"



      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  <ImageView
      android:layout_width="27dp"
      android:layout_height="40dp"
      android:layout_marginTop="23dp"
      android:layout_marginLeft="10dp"
      android:src="@drawable/ic_volver_flecha"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="29dp"
      android:layout_marginLeft="42dp"
      android:text="Volver a simulador"
      android:fontFamily="@font/worksans_semibold"
      android:textSize="18dp"
      android:textColor="@color/blanco"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/appCompatImageView2"
      android:layout_width="133dp"
      android:layout_height="130dp"
      android:layout_marginTop="28dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="13dp"
      android:fontFamily="@font/worksans_semibold"
      android:text="@string/nombre_de_usuario"
      android:textSize="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView3"
      android:layout_width="match_parent"
      android:layout_height="441dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">




    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cvw_requerimientos"

        android:orientation="vertical">


      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="32dp"
          android:layout_marginTop="23dp"
          android:fontFamily="@font/worksans_semibold"
          android:text="@string/mezclas_realizadas"
          android:textColor="@color/verde"
          android:textSize="22dp" />

      <androidx.cardview.widget.CardView
          android:id="@+id/cdvw_pollo"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:layout_marginLeft="32dp"
          android:layout_marginTop="96dp"
          android:layout_marginRight="32dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cvw_mezclas"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="horizontal">

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="226dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="12dp"
              android:layout_marginTop="20dp"
              android:fontFamily="@font/worksans_semibold"
              android:text="Mezcla pollo de engorde"
              android:textColor="@color/grisletra"
              android:textSize="18dp" />

          <androidx.appcompat.widget.AppCompatImageView
              android:layout_width="20dp"
              android:layout_height="26dp"
              android:layout_marginLeft="75dp"
              android:layout_marginTop="20dp"
              android:src="@drawable/ic_flecha" />
        </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cdvw_pollo_1"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:layout_marginLeft="32dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="32dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cvw_mezclas"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="horizontal">


          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="226dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="12dp"
              android:layout_marginTop="20dp"
              android:fontFamily="@font/worksans_semibold"
              android:text="@string/mezcla_pollo_etapa_1"
              android:textColor="@color/grisletra"
              android:textSize="18dp" />

          <androidx.appcompat.widget.AppCompatImageView
              android:layout_width="20dp"
              android:layout_height="26dp"
              android:layout_marginLeft="75dp"
              android:layout_marginTop="20dp"
              android:src="@drawable/ic_flecha" />
        </androidx.appcompat.widget.LinearLayoutCompat>


      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cdvw_pollo1"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:layout_marginLeft="32dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="32dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cvw_mezclas"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="horizontal">

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="226dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="12dp"
              android:layout_marginTop="20dp"
              android:fontFamily="@font/worksans_semibold"
              android:text="mezcla cerdo en engorde"
              android:textColor="@color/grisletra"
              android:textSize="18dp" />

          <androidx.appcompat.widget.AppCompatImageView
              android:layout_width="20dp"
              android:layout_height="26dp"
              android:layout_marginLeft="75dp"
              android:layout_marginTop="20dp"
              android:src="@drawable/ic_flecha" />
        </androidx.appcompat.widget.LinearLayoutCompat>

      </androidx.cardview.widget.CardView>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:id="@+id/cdvw_cerdo_engorde"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="32dp">

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/cvw_mezclas"
          android:elevation="@dimen/cardview_default_elevation"
          android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/worksans_semibold"
            android:text="@string/mezcla_cerdo"
            android:textColor="@color/grisletra"
            android:textSize="18dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="26dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_flecha" />
      </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

  </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>