<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="InvalidId" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <Button
                        android:id="@+id/btnIniciarSesion"
                        android:layout_width="152dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="71dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="5dp"
                        android:alpha="0.7"
                        android:background="@drawable/login"
                        android:backgroundTint="@color/cardview_light_background"
                        android:fontFamily="@font/work_sans_semibold"
                        android:text="@string/iniciar_sesion"
                        android:textAllCaps="false"
                        android:textColor="@color/verde"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText2"
                        app:layout_constraintVertical_bias="0.08" />


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="216dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/imagen_fondo1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="280dp"
                        android:fontFamily="@font/work_sans"
                        android:text="@string/bienvenido"
                        android:textColor="@color/blanco"
                        android:textSize="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/work_sans"
                        android:text="@string/contrasena"
                        android:textColor="@color/blanco"
                        android:textSize="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText"
                        tools:ignore="MissingConstraints" />


                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="32dp"
                        android:alpha="0.49"
                        android:background="@drawable/login"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        tools:layout_editor_absoluteX="57dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="40dp"
                        android:fontFamily="@font/work_sans"
                        android:text="@string/correo_electronico"
                        android:textColor="@color/blanco"
                        android:textSize="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="32dp"
                        android:background="@drawable/login"
                        android:alpha="0.49"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>